# SLA-Analisis-logs-python

./: .gitattributes  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: search.js  sla.html
docs/sla/: _utils.html  detectors.html  explorer.html  ingestion.html  simulation.html  transformer.html  visualization.html
docs/sla/explorer/: conftest.html  run_tests.html
docs/sla/ingestion/: base_parser.html  hdc_parser.html  hsm_parser.html  ibmmq_parser.html  ingestor.html  was_parser.html
docs/sla/simulation/: streaming_anomaly_detection.html
sentinel/: requirements.txt
sentinel/docs/notebooks/: Exploracion_PDTI.ipynb  Exploracion_PDTI_feb11.ipynb  custom_detector_quickstart.ipynb  ingestion_parsers.ipynb  lnn_quickstart.ipynb  quickstart.ipynb
sentinel/sentinel/: _utils.py
sentinel/sentinel/detectors/: __init__.py
sentinel/sentinel/ingestion/: hdc_parser.py  ibmmq_parser.py  ingestor.py
sentinel/sentinel/simulation/: __init__.py
sentinel/sentinel/visualization/: __init__.py
sla/: requirements.txt  setup.py
sla/docs/: index.html  search.js  sla.html
sla/docs/notebooks/: autoenconder_quickstart.ipynb  custom_detector_quickstart.ipynb  ingestion_parsers.ipynb  lnn_quickstart.ipynb  quickstart.ipynb
sla/docs/sla/: detectors.html  transformer.html
sla/sla/: __init__.py
sla/sla/detectors/: __init__.py  autoencoder.py  custom_detector.py  isolation_forest.py  lnn.py  lnn_quickstart.ipynb  prubea.ipynb  rrcf_detector.py
sla/sla/explorer/: __init__.py  conftest.py  report.html  (+1 more)
tests/: conftest.py
(+15 files in other folders)
